--- a/src/UnitTests/packages.config
+++ b/src/UnitTests/packages.config
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Loyc.Collections" version="26.5.0" targetFramework="net45" />
-  <package id="Loyc.Essentials" version="26.5.0" targetFramework="net45" />
-  <package id="Loyc.Math" version="26.5.0" targetFramework="net45" />
-  <package id="Loyc.Syntax" version="26.5.0" targetFramework="net45" />
-  <package id="Loyc.Utilities" version="26.5.0" targetFramework="net45" />
-  <package id="Mono.Cecil" version="0.10.3" targetFramework="net45" />
+  <package id="Loyc.Collections" version="26.8.1" targetFramework="net45" />
+  <package id="Loyc.Essentials" version="26.8.1" targetFramework="net45" />
+  <package id="Loyc.Math" version="26.8.1" targetFramework="net45" />
+  <package id="Loyc.Syntax" version="26.8.1" targetFramework="net45" />
+  <package id="Loyc.Utilities" version="26.8.1" targetFramework="net45" />
+  <package id="Mono.Cecil" version="0.10.4" targetFramework="net45" />
   <package id="Pixie" version="0.1.6" targetFramework="net45" />
   <package id="Pixie.Loyc" version="0.1.6" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net45" />
